--- a/docs/_static/basic.css
+++ b/docs/_static/basic.css
@@ -4,7 +4,7 @@
  *
  * Sphinx stylesheet -- basic theme.
  *
- * :copyright: Copyright 2007-2020 by the Sphinx team, see AUTHORS.
+ * :copyright: Copyright 2007-2022 by the Sphinx team, see AUTHORS.
  * :license: BSD, see LICENSE for details.
  *
  */
@@ -15,15 +15,12 @@ div.clearer {
     clear: both;
 }
 
-<<<<<<< HEAD
-=======
 div.section::after {
     display: block;
     content: '';
     clear: left;
 }
 
->>>>>>> 32d8e9f8cd2fea5028d677bd401d7ca7dbc35a4d
 /* -- relbar ---------------------------------------------------------------- */
 
 div.related {
@@ -133,7 +130,7 @@ ul.search li a {
     font-weight: bold;
 }
 
-ul.search li div.context {
+ul.search li p.context {
     color: #888;
     margin: 2px 0 0 30px;
     text-align: left;
@@ -225,7 +222,7 @@ table.modindextable td {
 /* -- general body styles --------------------------------------------------- */
 
 div.body {
-    min-width: 450px;
+    min-width: 360px;
     max-width: 800px;
 }
 
@@ -239,7 +236,6 @@ div.body p, div.body dd, div.body li, div.body blockquote {
 a.headerlink {
     visibility: hidden;
 }
-
 a.brackets:before,
 span.brackets > a:before{
     content: "[";
@@ -249,6 +245,7 @@ a.brackets:after,
 span.brackets > a:after {
     content: "]";
 }
+
 
 h1:hover > a.headerlink,
 h2:hover > a.headerlink,
@@ -280,25 +277,25 @@ p.rubric {
     font-weight: bold;
 }
 
-img.align-left, .figure.align-left, object.align-left {
+img.align-left, figure.align-left, .figure.align-left, object.align-left {
     clear: left;
     float: left;
     margin-right: 1em;
 }
 
-img.align-right, .figure.align-right, object.align-right {
+img.align-right, figure.align-right, .figure.align-right, object.align-right {
     clear: right;
     float: right;
     margin-left: 1em;
 }
 
-img.align-center, .figure.align-center, object.align-center {
+img.align-center, figure.align-center, .figure.align-center, object.align-center {
   display: block;
   margin-left: auto;
   margin-right: auto;
 }
 
-img.align-default, .figure.align-default {
+img.align-default, figure.align-default, .figure.align-default {
   display: block;
   margin-left: auto;
   margin-right: auto;
@@ -322,44 +319,29 @@ img.align-default, .figure.align-default {
 
 /* -- sidebars -------------------------------------------------------------- */
 
-div.sidebar {
+div.sidebar,
+aside.sidebar {
     margin: 0 0 0.5em 1em;
     border: 1px solid #ddb;
-<<<<<<< HEAD
-    padding: 7px 7px 0 7px;
-    background-color: #ffe;
-    width: 40%;
-    float: right;
-=======
     padding: 7px;
     background-color: #ffe;
     width: 40%;
     float: right;
     clear: right;
     overflow-x: auto;
->>>>>>> 32d8e9f8cd2fea5028d677bd401d7ca7dbc35a4d
 }
 
 p.sidebar-title {
     font-weight: bold;
 }
-
-<<<<<<< HEAD
-=======
 div.admonition, div.topic, blockquote {
     clear: left;
 }
 
->>>>>>> 32d8e9f8cd2fea5028d677bd401d7ca7dbc35a4d
 /* -- topics ---------------------------------------------------------------- */
-
 div.topic {
     border: 1px solid #ccc;
-<<<<<<< HEAD
-    padding: 7px 7px 0 7px;
-=======
     padding: 7px;
->>>>>>> 32d8e9f8cd2fea5028d677bd401d7ca7dbc35a4d
     margin: 10px 0 10px 0;
 }
 
@@ -381,13 +363,6 @@ div.admonition dt {
     font-weight: bold;
 }
 
-<<<<<<< HEAD
-div.admonition dl {
-    margin-bottom: 0;
-}
-
-=======
->>>>>>> 32d8e9f8cd2fea5028d677bd401d7ca7dbc35a4d
 p.admonition-title {
     margin: 0px 10px 5px 0px;
     font-weight: bold;
@@ -398,20 +373,17 @@ div.body p.centered {
     margin-top: 25px;
 }
 
-<<<<<<< HEAD
-/* -- tables ---------------------------------------------------------------- */
-
-table.docutils {
-=======
 /* -- content of sidebars/topics/admonitions -------------------------------- */
 
 div.sidebar > :last-child,
+aside.sidebar > :last-child,
 div.topic > :last-child,
 div.admonition > :last-child {
     margin-bottom: 0;
 }
 
 div.sidebar::after,
+aside.sidebar::after,
 div.topic::after,
 div.admonition::after,
 blockquote::after {
@@ -425,7 +397,6 @@ blockquote::after {
 table.docutils {
     margin-top: 10px;
     margin-bottom: 10px;
->>>>>>> 32d8e9f8cd2fea5028d677bd401d7ca7dbc35a4d
     border: 0;
     border-collapse: collapse;
 }
@@ -455,10 +426,6 @@ table.docutils td, table.docutils th {
     border-bottom: 1px solid #aaa;
 }
 
-table.footnote td, table.footnote th {
-    border: 0 !important;
-}
-
 th {
     text-align: left;
     padding-right: 5px;
@@ -473,15 +440,6 @@ table.citation td {
     border-bottom: none;
 }
 
-<<<<<<< HEAD
-th > p:first-child,
-td > p:first-child {
-    margin-top: 0px;
-}
-
-th > p:last-child,
-td > p:last-child {
-=======
 th > :first-child,
 td > :first-child {
     margin-top: 0px;
@@ -489,26 +447,27 @@ td > :first-child {
 
 th > :last-child,
 td > :last-child {
->>>>>>> 32d8e9f8cd2fea5028d677bd401d7ca7dbc35a4d
     margin-bottom: 0px;
 }
 
 /* -- figures --------------------------------------------------------------- */
 
-div.figure {
+div.figure, figure {
     margin: 0.5em;
     padding: 0.5em;
 }
 
-div.figure p.caption {
+div.figure p.caption, figcaption {
     padding: 0.3em;
 }
 
-div.figure p.caption span.caption-number {
+div.figure p.caption span.caption-number,
+figcaption span.caption-number {
     font-style: italic;
 }
 
-div.figure p.caption span.caption-text {
+div.figure p.caption span.caption-text,
+figcaption span.caption-text {
 }
 
 /* -- field list styles ----------------------------------------------------- */
@@ -535,15 +494,69 @@ table.field-list td, table.field-list th {
 
 /* -- hlist styles ---------------------------------------------------------- */
 
-<<<<<<< HEAD
-=======
 table.hlist {
     margin: 1em 0;
 }
 
->>>>>>> 32d8e9f8cd2fea5028d677bd401d7ca7dbc35a4d
 table.hlist td {
     vertical-align: top;
+}
+
+/* -- object description styles --------------------------------------------- */
+
+.sig {
+	font-family: 'Consolas', 'Menlo', 'DejaVu Sans Mono', 'Bitstream Vera Sans Mono', monospace;
+}
+
+.sig-name, code.descname {
+    background-color: transparent;
+    font-weight: bold;
+}
+
+.sig-name {
+	font-size: 1.1em;
+}
+
+code.descname {
+    font-size: 1.2em;
+}
+
+.sig-prename, code.descclassname {
+    background-color: transparent;
+}
+
+.optional {
+    font-size: 1.3em;
+}
+
+.sig-paren {
+    font-size: larger;
+}
+
+.sig-param.n {
+	font-style: italic;
+}
+
+/* C++ specific styling */
+
+.sig-inline.c-texpr,
+.sig-inline.cpp-texpr {
+	font-family: unset;
+}
+
+.sig.c   .k, .sig.c   .kt,
+.sig.cpp .k, .sig.cpp .kt {
+	color: #0033B3;
+}
+
+.sig.c   .m,
+.sig.cpp .m {
+	color: #1750EB;
+}
+
+.sig.c   .s, .sig.c   .sc,
+.sig.cpp .s, .sig.cpp .sc {
+	color: #067D17;
 }
 
 
@@ -569,19 +582,6 @@ ol.upperroman {
     list-style: upper-roman;
 }
 
-<<<<<<< HEAD
-li > p:first-child {
-    margin-top: 0px;
-}
-
-li > p:last-child {
-    margin-bottom: 0px;
-}
-
-dl.footnote > dt,
-dl.citation > dt {
-    float: left;
-=======
 :not(li) > ol > li:first-child > :first-child,
 :not(li) > ul > li:first-child > :first-child {
     margin-top: 0px;
@@ -608,12 +608,10 @@ ol.simple p,
 ul.simple p {
     margin-bottom: 0;
 }
-
 dl.footnote > dt,
 dl.citation > dt {
     float: left;
     margin-right: 0.5em;
->>>>>>> 32d8e9f8cd2fea5028d677bd401d7ca7dbc35a4d
 }
 
 dl.footnote > dd,
@@ -638,10 +636,10 @@ dl.field-list > dt {
     padding-left: 0.5em;
     padding-right: 5px;
 }
-
 dl.field-list > dt:after {
     content: ":";
 }
+
 
 dl.field-list > dd {
     padding-left: 0.5em;
@@ -654,11 +652,7 @@ dl {
     margin-bottom: 15px;
 }
 
-<<<<<<< HEAD
-dd > p:first-child {
-=======
 dd > :first-child {
->>>>>>> 32d8e9f8cd2fea5028d677bd401d7ca7dbc35a4d
     margin-top: 0px;
 }
 
@@ -672,14 +666,11 @@ dd {
     margin-left: 30px;
 }
 
-<<<<<<< HEAD
-=======
 dl > dd:last-child,
 dl > dd:last-child > :last-child {
     margin-bottom: 0;
 }
 
->>>>>>> 32d8e9f8cd2fea5028d677bd401d7ca7dbc35a4d
 dt:target, span.highlighted {
     background-color: #fbe54e;
 }
@@ -691,14 +682,6 @@ rect.highlighted {
 dl.glossary dt {
     font-weight: bold;
     font-size: 1.1em;
-}
-
-.optional {
-    font-size: 1.3em;
-}
-
-.sig-paren {
-    font-size: larger;
 }
 
 .versionmodified {
@@ -741,8 +724,9 @@ dl.glossary dt {
 
 .classifier:before {
     font-style: normal;
-    margin: 0.5em;
+    margin: 0 0.5em;
     content: ":";
+    display: inline-block;
 }
 
 abbr, acronym {
@@ -757,46 +741,29 @@ pre {
     overflow-y: hidden;  /* fixes display issues on Chrome browsers */
 }
 
-<<<<<<< HEAD
-=======
-pre, div[class|="highlight"] {
+pre, div[class*="highlight-"] {
     clear: both;
 }
 
->>>>>>> 32d8e9f8cd2fea5028d677bd401d7ca7dbc35a4d
 span.pre {
     -moz-hyphens: none;
     -ms-hyphens: none;
     -webkit-hyphens: none;
     hyphens: none;
+    white-space: nowrap;
 }
 
-<<<<<<< HEAD
-td.linenos pre {
-    padding: 5px 0px;
-=======
-div[class^="highlight-"] {
+div[class*="highlight-"] {
     margin: 1em 0;
 }
 
 td.linenos pre {
->>>>>>> 32d8e9f8cd2fea5028d677bd401d7ca7dbc35a4d
     border: 0;
     background-color: transparent;
     color: #aaa;
 }
 
 table.highlighttable {
-<<<<<<< HEAD
-    margin-left: 0.5em;
-}
-
-table.highlighttable td {
-    padding: 0 0.5em 0 0.5em;
-}
-
-div.code-block-caption {
-=======
     display: block;
 }
 
@@ -837,7 +804,6 @@ div.code-block-caption + div {
 
 div.code-block-caption {
     margin-top: 1em;
->>>>>>> 32d8e9f8cd2fea5028d677bd401d7ca7dbc35a4d
     padding: 2px 5px;
     font-size: small;
 }
@@ -846,16 +812,14 @@ div.code-block-caption code {
     background-color: transparent;
 }
 
-<<<<<<< HEAD
-div.code-block-caption + div > div.highlight > pre {
-    margin-top: 0;
-}
-
-=======
 table.highlighttable td.linenos,
->>>>>>> 32d8e9f8cd2fea5028d677bd401d7ca7dbc35a4d
-div.doctest > div.highlight span.gp {  /* gp: Generic.Prompt */
-    user-select: none;
+span.linenos,
+div.highlight span.gp {  /* gp: Generic.Prompt */
+  user-select: none;
+  -webkit-user-select: text; /* Safari fallback only */
+  -webkit-user-select: none; /* Chrome/Safari */
+  -moz-user-select: none; /* Firefox */
+  -ms-user-select: none; /* IE10+ */
 }
 
 div.code-block-caption span.caption-number {
@@ -867,25 +831,7 @@ div.code-block-caption span.caption-text {
 }
 
 div.literal-block-wrapper {
-<<<<<<< HEAD
-    padding: 1em 1em 0;
-}
-
-div.literal-block-wrapper div.highlight {
-    margin: 0;
-=======
     margin: 1em 0;
->>>>>>> 32d8e9f8cd2fea5028d677bd401d7ca7dbc35a4d
-}
-
-code.descname {
-    background-color: transparent;
-    font-weight: bold;
-    font-size: 1.2em;
-}
-
-code.descclassname {
-    background-color: transparent;
 }
 
 code.xref, a code {
@@ -926,12 +872,7 @@ span.eqno {
 }
 
 span.eqno a.headerlink {
-<<<<<<< HEAD
-    position: relative;
-    left: 0px;
-=======
     position: absolute;
->>>>>>> 32d8e9f8cd2fea5028d677bd401d7ca7dbc35a4d
     z-index: 1;
 }
 
